--- a/frontend/angular/src/app/app.component.html
+++ b/frontend/angular/src/app/app.component.html
@@ -128,29 +128,26 @@
             </form>
           </div>
           <!-- Calendar -->
-          <link rel="stylesheet" href="assets/css/jquery-ui.css" />
-          <script src="assets/js/jquery-ui.js"></script>
-          <script>
-            $(function() {
-              $( "#datepicker" ).datepicker();
-            });
-          </script>
+          <!--<script>-->
+            <!--$(function() {-->
+              <!--$( "#datepicker" ).datepicker();-->
+            <!--});-->
+          <!--</script>-->
           <!-- //Calendar -->
         </div>
       </div>
     </div>
     <!-- //modal -->
     <!-- FlexSlider -->
-    <script defer src="assets/js/jquery.flexslider.js"></script>
-    <script type="text/javascript">
-      $(window).load(function() {
-        $('.flexslider').flexslider({
-          animation: "slide",
-          controlsContainer: $(".custom-controls-container"),
-          customDirectionNav: $(".custom-navigation a")
-        });
-      });
-    </script>
+    <!--<script type="text/javascript">-->
+      <!--$(window).load(function() {-->
+        <!--$('.flexslider').flexslider({-->
+          <!--animation: "slide",-->
+          <!--controlsContainer: $(".custom-controls-container"),-->
+          <!--customDirectionNav: $(".custom-navigation a")-->
+        <!--});-->
+      <!--});-->
+    <!--</script>-->
     <!-- //FlexSlider -->
   </div>
   <!-- //banner-text -->
