FE: Custom contact us

--- a/frontend/angular/src/app/layout-components/contact-us/contact-us.component.html
+++ b/frontend/angular/src/app/layout-components/contact-us/contact-us.component.html
@@ -5,9 +5,9 @@
       <h3> Contact Us</h3>
     </div>
     <ul>
-      <li><i class="fa fa-map-marker" aria-hidden="true"></i>Broome St, Canada, NY 10002, New York</li>
+      <li><i class="fa fa-map-marker" aria-hidden="true"></i>Xo Viet Nghe Tinh St, Vietnam, HCM 700000, Ho Chi Minh</li>
       <li><i class="fa fa-phone" aria-hidden="true"> </i>  +01 111 222 3333</li>
-      <li><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:info@example.com"> mail@example.com</a></li>
+      <li><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:info@example.com"> nguyentrucxinh@outlook.com</a></li>
     </ul>
   </div>
 </div>
@@ -35,13 +35,13 @@
 <div class="footer">
   <div class="container">
     <div class="social-icon">
-      <a href="#" class="social-button twitter"><i class="fa fa-twitter"></i></a>
-      <a href="#" class="social-button facebook"><i class="fa fa-facebook"></i></a>
-      <a href="#" class="social-button google"><i class="fa fa-google-plus"></i></a>
-      <a href="#" class="social-button dribbble"><i class="fa fa-dribbble"></i></a>
-      <a href="#" class="social-button skype"><i class="fa fa-skype"></i></a>
+      <a href="mailto:nguyentrucxinh@outlook.com" title="Email" target="_blank" class="social-button google"><i class="fa fa-envelope"></i></a>
+      <a href="https://twitter.com/nguyentrucxinh" title="Twitter" target="_blank" class="social-button twitter"><i class="fa fa-twitter"></i></a>
+      <a href="https://www.linkedin.com/in/nguyentrucxinh" title="LinkedIn" target="_blank" class="social-button facebook"><i class="fa fa-linkedin-square"></i></a>
+      <a href="https://github.com/nguyentrucxinh" title="GitHub" target="_blank" class="social-button dribbble"><i class="fa fa-github"></i></a>
     </div>
-    <p>© 2016 Grilling. All rights reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
+    <p>This site is developed in Angular by Xinh Nguyen from the original design from <a href="http://w3layouts.com">W3layouts</a></p>
+    <p>© 2016 Grilling. All rights reserved</p>
   </div>
 </div>
 <!-- //footer -->
