--- a/frontend/angular/src/app/app.component.html
+++ b/frontend/angular/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-banner></app-banner>
-<app-about></app-about>
-<app-slid></app-slid>
-<app-menu></app-menu>
-<app-team></app-team>
+<!-- <app-about></app-about> -->
+<!-- <app-slid></app-slid> -->
+<!-- <app-menu></app-menu> -->
+<!-- <app-team></app-team> -->
 <app-gallery></app-gallery>
 <app-contact-us></app-contact-us>
