FE: Admin portal - Upload file

--- a/frontend/admin/src/app/app.component.html
+++ b/frontend/admin/src/app/app.component.html
@@ -14,7 +14,7 @@
 
       <app-form></app-form>
 
-      <app-social-media></app-social-media>
+      <!--<app-social-media></app-social-media>-->
     </div>
     <!-- //inner_content_w3_agile_info-->
   </div>
