FE: Admin portal: Custom text

--- a/frontend/admin/src/app/layout-components/form/form.component.html
+++ b/frontend/admin/src/app/layout-components/form/form.component.html
@@ -2,7 +2,7 @@
 <div class="forms-main_agileits">
 
   <div class="graph-form agile_info_shadow">
-    <h3 class="w3_inner_tittle two">Basic Form </h3>
+    <h3 class="w3_inner_tittle two">Item Form </h3>
     <div class="form-body">
       <form>
         <div class="form-group">
